<resources>
    <string name="app_name">Office2get</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="or">OR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">sign up</string>
    <string name="sign_up_your_accountc">sign up your account</string>
    <string name="email">Email</string>
    <string name="signup2">sign up!</string>
    <string name="enter_your_otp">Enter your otp</string>
    <string name="proceed">proceed!</string>
    <string name="resend">resend!</string>
    <string name="sign_in">sign in</string>
    <string name="wellcome_back">welcome back!</string>
    <string name="password">password</string>
    <string name="sign_in2">sign in!</string>
    <string name="reset">reset!</string>
    <string name="create_new_password_here">create new password here</string>
    <string name="update">Update!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_sent">Email sent</string>
    <string name="password_reset">An email with password reset instruction has been sent to your emailx</string>
    <string name="ok">ok</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="updated_sucessfully">Yorr password has been updated sucessfully</string>
    <string name="notification">Notification</string>
    <string name="you_have_to_sign_up_first_to_create_room">You have to sign up first to create room.</string>
    <string name="start_end_calender"><![CDATA[Start & End (Calender)]]></string>
    <string name="my_desk">My Desk</string>
    <string name="my_office">My Office</string>
    <string name="my_studio">My Studio</string>
    <string name="my_meeting_room">My Meeting Room</string>
    <string name="search">search</string>
    <string name="message">Message</string>
    <string name="chat">Add hotel</string>
    <string name="profile">Profile</string>
    <string name="upcomming_booking">Upcomming Bookings</string>
    <string name="favorite_places">Favorite Places</string>
    <string name="past_bookings">Past Bookings</string>
    <string name="my_posting_host">My Posting/Host</string>
    <string name="search_history">Search History</string>
    <string name="view_all">View All</string>
    <string name="my_booking">My Booking</string>
    <string name="create_new_password">Create new password</string>
    <string name="scheduled">Scheduled</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="city">City</string>
    <string name="number_of_people">Number of People</string>
    <string name="completedc">Completed</string>
    <string name="rate_our_service">Rate our service</string>
    <string name="awesome">Awesome!</string>
    <string name="say_something_about_our_service">say something about our service</string>
    <string name="thanks_for_your_rating">Thanks For Your Rating!</string>
    <string name="messages">Messages</string>
    <string name="update_payment_card">Update Payment Card</string>
    <string name="personal_info">Personal Info</string>
    <string name="log_out">Log`out!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">Paypal</string>
    <string name="google_pay">Google PAy</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvc">CVC</string>
    <string name="save">save!</string>
    <string name="notifications">Notifications</string>
    <string name="blogs">Blogs</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hotel_description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="_23_min_ago">23 min ago</string>
    <string name="hotel_detail_desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. It is a long established fact that a reader distracted by the readable content of a page when looking at its layout. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="termsAndCondition">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters. . It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="post_your_free_space">post your free space</string>
    <string name="upload_images">Upload Images</string>
    <string name="title">Title</string>
    <string name="add_your_details">Add Your Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phNum">Phone Number</string>
    <string name="compnay_name">Compnay Name</string>
    <string name="adress">Adress</string>
    <string name="postal_code">Postal Code</string>
    <string name="street">Street #</string>
    <string name="object">Object</string>
    <string name="size">Size</string>
    <string name="flour">Flour</string>
    <string name="lift">Lift</string>
    <string name="parking">Parking</string>
    <string name="barrier_free">Barrier Free</string>
    <string name="building_type">Building Type</string>
    <string name="aircondition">Air Conditioned</string>
    <string name="heating">Heating</string>
    <string name="internet">Internet</string>
    <string name="printing">Printing</string>
    <string name="description">Description</string>
    <string name="your_room_has_been_created_sucessfully">Your room has been created sucessfully.</string>
    <string name="welcome_jhon">welcome, jhon</string>
    <string name="set_availability">SET AVAILABILITY</string>
    <string name="completed_bookings">COMPLETED BOOKINGS</string>
    <string name="my_chat">MY CHAT</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="notifications2">NOTIFICATIONS</string>
    <string name="create_invoices">CREATE INVOICES</string>
    <string name="my_income">MY INCOME</string>
    <string name="set_your_availibility">Set your availibility</string>
    <string name="booking_request">Booking Request</string>
    <string name="prebooking">PreBooking</string>
    <string name="confirm">Confirm</string>
    <string name="cancal">Cancel</string>
    <string name="completed">Completed</string>
    <string name="inv_0015">INV-0015</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="room_number">Room Number</string>
    <string name="user_name">User Name</string>
    <string name="total_price">Total Price</string>
    <string name="date2">Date</string>
    <string name="time2">Time</string>
    <string name="total_income">Total Income</string>
    <string name="the_total_sale">The total sale that you`ve made activation period.</string>
    <string name="back">Back!</string>
    <string name="update_availibility">Update availibility</string>
    <string name="update_category">update category</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="moto">Moto</string>
    <string name="booking_done">Booking Done</string>
    <string name="done">Done!</string>
    <string name="thanks_for_your_booking">Thanks for your Booking!</string>
    <string name="congrats">congrats</string>
    <string name="filter_by">Filter by</string>
    <string name="sortby">sortby</string>
    <string name="room_type">Room Type</string>
    <string name="sizeodroom">Size of Room</string>
    <string name="district">District</string>
    <string name="street2">Street</string>
    <string name="center_detail">Center Detail</string>
    <string name="masara_hotel">Masara Hotel</string>
    <string name="austellugria_50_2nd_floor_vienna_1020">Austellugria 50, 2nd floor Vienna, 1020</string>
    <string name="call">+43 12057741000</string>
    <string name="_24_7_access_for_private_office_and_dedicated_cowork_cutomers">24 / 7 access For private office and dedicated cowork cutomers</string>
    <string name="it_is_a_long_established_fact_that_a_reader_will_be_distracted_by_the_readable_content">It is a long established fact that a reader will be distracted by the readable content</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="add_payment">Add Payment!</string>
    <string name="booking_review">BOOKING REVIEW</string>
    <string name="my_desk2">My Desk</string>
    <string name="_09">09</string>
    <string name="location">Location</string>
    <string name="about_location">ABOUT THIS LOCATION</string>
    <string name="hoteldescr">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. It is a long established fact that a reader will be distracted by the readable content.</string>
    <string name="showMoew">Show More!</string>
    <string name="faciites">FACILITIES</string>
    <string name="price">Price</string>
    <string name="elevator">Elevator</string>
    <string name="otp_verification">otp verification</string>
    <string name="fill_detail">Fill Detail</string>
    <string name="fill_the_details_given_below">fill the details given below</string>
    <string name="vat_number">VAT-Number</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="skip_amp_browse"><![CDATA[skip & Browse]]></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_bookings">confirm bookings</string>
    <string name="start_amp_end_calendar"><![CDATA[Start & End (Calendar)]]></string>
    <string-array name="Adress">
        <item>Adress Location</item>
        <item>Canda</item>
        <item>USA</item>
    </string-array>
</resources>