<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.fragments.authFragments.AuthHomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <RelativeLayout
            android:id="@+id/llimg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:background="@drawable/role_selection_img"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/role_bg" />

        </RelativeLayout>

        <TextView
            style="@style/TextViewTop"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="Welcome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_signin"
            style="@style/TextView_below_topImage"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/please_sign_in"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llimg" />

        <View
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_signin" />

        <TextView
            android:id="@+id/btnLogin"
            style="@style/btns_style"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/btn_bg"
            android:text="@string/login"
            android:textColor="@color/btns_noClick_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_signin" />

        <TextView
            android:id="@+id/btnRegister"
            style="@style/btns_style"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/btn_bg"
            android:text="@string/register"
            android:textColor="@color/btns_noClick_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/lato_medium"
            android:padding="@dimen/_10sdp"
            android:text="@string/or"
            android:textColor="@color/btns_noClick_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRegister" />


        <TextView
            android:id="@+id/btnSkipAndBrowse"
            style="@style/btns_style"
            android:layout_marginTop="@dimen/_60sdp"
            android:background="@drawable/btn_bg"
            android:text="@string/skip_amp_browse"
            android:textColor="@color/btns_noClick_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="@dimen/_24sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRegister" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>